Translation between user-id to user
